# MicroArchBench

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIXES.md  Makefile  README.md  SECURITY.md  requirements.txt
.github/workflows/: ci.yml
cmake/: DetectArch.cmake  PerfCounters.cmake  Sanitizers.cmake  toolchain-aarch64.cmake
docs/: methodology.md  reproducibility.md
docs/hardware_notes/: amd_zen3.md  arm_cortex_a72.md  intel_skylake.md
include/: bench_utils.hpp  numa.hpp  perf_event.hpp  topology.hpp
scripts/: check_system.sh  parse_perf.py  plot_bandwidth_scaling.py  roofline.py  run_suite.sh  tile_predict.py
src/: gemm_tile_predict.cpp  peak_flops.cpp  pointer_chase.cpp  stream.cpp
tests/: test_permutation.cpp  test_stream_verify.cpp
